--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -192,7 +192,7 @@ button:hover, button:active {
     }
 }
 
-@media(max-width: 770px) {
+@media(max-width: 767px) {
     .order-button{
     margin-top: 15%;
     width:100%;
@@ -206,6 +206,16 @@ button:hover, button:active {
     margin-top: 20%;
     width:100%;
     display:block;
+    
+}
+}
+
+@media(max-width: 425px) {
+    .order-button{
+    margin-top: 20%;
+    width:100%;
+    display:block;
+    margin: 0 auto;
     
 }
 }
