--- a/public/stylesheets/services.css
+++ b/public/stylesheets/services.css
@@ -49,6 +49,6 @@ h1{
     font-weight: 700;
 }
 
-.products_banner{
+.services_banner{
     margin-bottom: 50px;
 }
